<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendingActivity">

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_light_chat"
        android:gravity="center"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/chatContainer"
        app:layout_constraintBottom_toBottomOf="@id/chatContainer"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textInputs"/>

    <LinearLayout
        android:id="@+id/textInputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal"
        android:baselineAligned="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chatContainer"
        app:layout_constraintBottom_toTopOf="@id/buttons"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:layout_marginEnd="8dp"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            android:hint="@string/message" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/messageInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="15"
                android:inputType="textShortMessage"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:layout_marginStart="8dp"
            app:counterEnabled="true"
            app:counterMaxLength="6"
            android:hint="@string/dot_duration" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dotDurationInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="6"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <Button
            android:id="@+id/receiveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:onClick="onReceiveButtonClick"
            android:text="@string/receive"
            app:backgroundTint="@color/lochmara"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:onClick="onSendButtonClick"
            android:text="@string/send"
            app:backgroundTint="@color/lochmara"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>